# tvm-rust

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  run_tests.sh  rustfmt.toml
examples/resnet/: Cargo.toml  README.md  build.rs
examples/resnet/src/: build_resnet.py  main.rs
src/: bytearray.rs  context.rs  errors.rs  function.rs  internal_api.rs  lib.rs  module.rs  ndarray.rs  ty.rs  value.rs
tests/basics/: .gitignore  Cargo.toml  build.rs
tests/basics/src/: main.rs  tvm_add_cpu.py  tvm_add_gpu.py
tests/callback/: Cargo.toml
tests/callback/src/: main.rs
tvm-sys/: Cargo.toml  build.rs
tvm-sys/src/: bindgen.rs  lib.rs
