[package]
name = "tvm-rust"
version = "0.0.2"
authors = ["Ehsan M.Kermani <ehsanmo1367@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

homepage = "https://github.com/ehsanmok/tvm-rust"
repository = "https://github.com/ehsanmok/tvm-rust"
documentation = "https://docs.rs/tvm-rust/"

description = "Rust support for TVM runtime"

keywords = ["rust", "tvm", "nnvm"]
categories = ["api-bindings", "science"]

[lib]
name = "tvm_rust"
crate-type = ["dylib"]

[dependencies]
tvm-sys = { version = "0.1.0", path = "tvm-sys" }
ndarray = { version = "0.11.2", features = ["blas"] }
blas-src = { version = "0.1.2", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.5.6", default-features = false, features = ["cblas", "system"] }
lazy_static = "1.1.0"
num-traits = "0.2"
custom_error = "1.3.0"

[dev-dependencies]
#clippy = { version = "*" }

[profile.release]
debug = true

[package.metadata.release]
no-dev-version = true