[package]
name = "tvm-frontend"
version = "0.1.0"
license = "Apache-2.0"
description = "Rust frontend support for TVM"
repository = "https://github.com/dmlc/tvm"
homepage = "https://github.com/dmlc/tvm"
readme = "README.md"
keywords = ["rust", "tvm", "nnvm"]
categories = ["api-bindings", "science"]
authors = ["Ehsan M.Kermani <ehsanmo1367@gmail.com>"]

[lib]
name = "tvm_frontend"
crate-type = ["dylib"]

[dependencies]
tvm-sys = { version = "0.1.0", path = "tvm-sys" }
ndarray = { version = "0.12.1" }
lazy_static = "1.1.0"
num-traits = "0.2"
custom_error = "1.3.0"
